--- a/meat-api/package.json
+++ b/meat-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meat-api",
+  "name": "",
   "version": "1.0.0",
   "description": "API de Restaurantes",
   "main": "index.js",
@@ -25,7 +25,7 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "1.0.3",
+    "bcrypt": "^3.0.6",
     "mongoose": "4.13.9",
     "restify": "6.3.4",
     "restify-errors": "5.0.0"
