--- a/meat-api/package.json
+++ b/meat-api/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "",
+  "name": "meat-api",
   "version": "1.0.0",
   "description": "API de Restaurantes",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "ts-node jest.startup.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "jest": {
+    "verbose": true,
+    "globals": {
+      "address": "http://localhost:3001"
+    },
     "testEnvironment": "node",
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
@@ -25,7 +29,7 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "bcrypt": "1.0.3",
     "mongoose": "4.13.9",
     "restify": "6.3.4",
     "restify-errors": "5.0.0"
@@ -38,8 +42,10 @@
     "@types/restify-errors": "4.3.2",
     "@types/supertest": "2.0.4",
     "jest": "22.4.2",
+    "jest-cli": "22.4.2",
     "supertest": "3.0.0",
     "ts-jest": "22.0.4",
+    "ts-node": "5.0.1",
     "typescript": "2.6.2"
   }
 }
