--- a/meat-api/package.json
+++ b/meat-api/package.json
@@ -12,7 +12,8 @@
   "jest": {
     "verbose": true,
     "globals": {
-      "address": "http://localhost:3001"
+      "address": "http://localhost:3001",
+      "auth": "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJhZG1pbkBlbWFpbC5jb20iLCJpYXQiOjE1MTYyMzkwMjJ9.HCtLeNy5-33THRqf03ayTWV0UiTNEuBgKzE-G_03d3g"
     },
     "testEnvironment": "node",
     "transform": {
@@ -29,7 +30,7 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "3.0.6",
+    "bcrypt": "1.0.3",
     "jsonwebtoken": "8.1.1",
     "mongoose": "4.13.9",
     "restify": "6.3.4",
